--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -49,7 +49,7 @@
 								<p><a href="https://foreignlanguages.press/colorful-classics/basic-principles-of-marxism-leninism-a-primer-jose-maria-sison/">Text</a> | Audio Not Available</p></li>
 								<li><h4>Principles of Communism</h4>
      							<p>- Friedrich Engels, 15 pages.</p>
-								<p><a href="https://archive.org/details/PrinciplesOfCommunism">Text</a> | Audio Not Available</p></li>
+								<p><a href="https://archive.org/details/PrinciplesOfCommunism">Text</a> | <a href="https://www.youtube.com/watch?v=HGcpspooZvk&list=PLXUFLW8t2snsxgLG48-U1bGXmbK_92_hg&index=3">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -133,8 +133,8 @@
 						<div class="hiddenBody">
 							<ol>
      							<li><h4>Critique of the Gotha Program</h4>
-     							<p>- Karl Marx and Friedrich Engels, 509 pages.</p>
-     							<p><a href="https://archive.org/details/in.ernet.dli.2015.131494">Text</a> | Audio Not Available</p></li>
+     							<p>- Karl Marx and Friedrich Engels, 20 pages.</p>
+     							<p><a href="https://www.marxists.org/archive/marx/works/download/Marx_Critque_of_the_Gotha_Programme.pdf">Text</a> | Audio Not Available</p></li>
      							<li><h4>Socialism: Utopian and Scientific</h4>
      							<p>- Friedrich Engels, 135 pages.</p>
      							<p><a href="https://archive.org/details/socialismutopia00engegoog/page/n6/mode/2up">Text</a> | Audio Not Available</p></li>
