AUDIO books added to most basic theory books

--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -46,7 +46,7 @@
 							<ol>
 								<li><h4>Basic Principles of Marxism Leninism</h4>
      							<p>- Jose Maria Sison, 176 pages.</p>
-								<p><a href="https://foreignlanguages.press/colorful-classics/basic-principles-of-marxism-leninism-a-primer-jose-maria-sison/">Text</a> | Audio Not Available</p></li>
+								<p><a href="https://foreignlanguages.press/colorful-classics/basic-principles-of-marxism-leninism-a-primer-jose-maria-sison/">Text</a> | <a href="https://www.youtube.com/watch?v=s7Zt1OpuO1w">Youtube</a></p></li>
 								<li><h4>Principles of Communism</h4>
      							<p>- Friedrich Engels, 15 pages.</p>
 								<p><a href="https://archive.org/details/PrinciplesOfCommunism">Text</a> | <a href="https://www.youtube.com/watch?v=HGcpspooZvk&list=PLXUFLW8t2snsxgLG48-U1bGXmbK_92_hg&index=3">Youtube</a></p></li>
@@ -90,10 +90,10 @@
 							<ol>
      							<li><h4>Capital, Volume 1</h4>
      							<p>- Karl Marx and Friedrich Engels, 520 pages.</p>
-     							<p><a href="https://archive.org/details/CapitalVolume1">Text</a> | Audio Not Available</p></li>
+     							<p><a href="https://archive.org/details/CapitalVolume1">Text</a> | <a href="https://www.youtube.com/watch?v=GmgycyY5saM&list=PLUjbFtkcDBlSHVigHHx_wjaeWmDN2W-h8">Youtube</a></p></li>
      							<li><h4>Wage Labor and Capital</h4>
      							<p>- Karl Marx, 68 pages.</p>
-     							<p><a href="https://archive.org/details/wagelaborcapital00marx">Text</a> | Audio Not Available</p></li>
+     							<p><a href="https://archive.org/details/wagelaborcapital00marx">Text</a> | <a href="https://www.youtube.com/watch?v=6llbLvm3RAc&list=PLXUFLW8t2snsxgLG48-U1bGXmbK_92_hg&index=4"Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -134,10 +134,10 @@
 							<ol>
      							<li><h4>Critique of the Gotha Program</h4>
      							<p>- Karl Marx and Friedrich Engels, 20 pages.</p>
-     							<p><a href="https://www.marxists.org/archive/marx/works/download/Marx_Critque_of_the_Gotha_Programme.pdf">Text</a> | Audio Not Available</p></li>
+     							<p><a href="https://www.marxists.org/archive/marx/works/download/Marx_Critque_of_the_Gotha_Programme.pdf">Text</a> | <a href="https://www.youtube.com/watch?v=IIkR-0NeOzw">Youtube</a></p></li>
      							<li><h4>Socialism: Utopian and Scientific</h4>
      							<p>- Friedrich Engels, 135 pages.</p>
-     							<p><a href="https://archive.org/details/socialismutopia00engegoog/page/n6/mode/2up">Text</a> | Audio Not Available</p></li>
+     							<p><a href="https://archive.org/details/socialismutopia00engegoog/page/n6/mode/2up">Text</a> | <a href="https://www.youtube.com/watch?v=F4_BiWhvVyA&list=PLXUFLW8t2snsxgLG48-U1bGXmbK_92_hg&index=19">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
