add two (2) google drive lists

--- a/pages/resources/libraries.html
+++ b/pages/resources/libraries.html
@@ -73,6 +73,8 @@
 						<a href="https://linktr.ee/TainoLibrary/"><p>Taino Library</p></a>
 						<a href="https://www.dropbox.com/sh/o7jmas0xzlpmvx3/AADZaLo3SL7fFqkUyMVYlbXGa?dl=0/"><p>The Radical’s Library Dropbox</p></a>
 						<a href="https://transreads.org/"><p>Trans Reads</p></a>
+						<a href="https://docs.google.com/document/d/1we5OEdteZFfAh11v0s_RVh3LWAkVICGrFnvksVynGxw/edit"><p>DPRK Reading List</p></a>
+						<a href="https://docs.google.com/document/d/1Gxwhh-vdeB--47HM-20cEVRC9eAMhrapbNf0Sk8VSOs/edit"><p>Debunking Anti-Communist Myths</p></a>
 				</div>
 			</div>
 			<div class="hidden">
