Articles and audiobooks

--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -46,13 +46,13 @@
 							<ol>
 								<li><h4>Wretched of the Earth</h4>
      							<p>- Frantz Fanon, 316 pages.</p>
-								<p><a href="https://archive.org/embed/thewretchedoftheearth">Text</a> | Audio Not Available</p></li>
+								<p><a href="https://archive.org/embed/thewretchedoftheearth">Text</a> | <a href="https://www.youtube.com/watch?v=_Fydi9CSXcw">Youtube</a></p></li>
 								<li><h4>How Europe Underdeveloped Africa</h4>
      							<p>- Walter Rodney, 453 pages.</p>
-								<p><a href="https://archive.org/details/BooksBagHowEuropeUnderdevelopedAfricaByWalterRodney">Text</a> | Audio Not Available</p></li>
+								<p><a href="https://archive.org/details/BooksBagHowEuropeUnderdevelopedAfricaByWalterRodney">Text</a> | <a href="https://www.youtube.com/watch?v=u_LLnOXy7oM">Youtube</a></p></li>
 								<li><h4>A Dying Colonialism</h4>
      							<p>- Frantz Fanon, 92 pages</p>
-								<p><a href="https://library.memoryoftheworld.org/#/book/087d061e-5758-4bf2-be8a-662efc396508">Text</a> | Audio Not Available</p></li>
+								<p><a href="https://library.memoryoftheworld.org/#/book/087d061e-5758-4bf2-be8a-662efc396508">Text</a> | <a href="https://www.youtube.com/watch?v=SmGhRL0YMoc">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -92,7 +92,7 @@
 							<ol>
      							<li><h4>Imperialism: The Highest Stage of Capitalism</h4>
      							<p>- V.L Lenin, 95 pages.</p>
-     							<p><a href="https://www.marxists.org/archive/lenin/works/1916/imp-hsc/index.htm">Text</a> | Audio Not Available</p></li>
+     							<p><a href="https://www.marxists.org/archive/lenin/works/1916/imp-hsc/index.htm">Text</a> | <a href="https://fulllengthaudiobook.com/v-i-lenin-imperialism-the-highest-stage-of-capitalism-audiobook/">fulllengthaudiobook.com</a></p></li>
      							<li><h4>Imperialism and Unequal Development</h4>
      							<p>- Samir Amin, 146 pages.</p>
      							<p><a href="https://library.memoryoftheworld.org/#/book/3e75acc6-da0d-4df9-a76f-ab41f7686e6d">Text</a> | Audio Not Available</p></li>
@@ -155,7 +155,12 @@
 						<input type="checkbox" id="nationhood-articles" class="hiddenToggle">
 						<label class="hiddenHead" for="nationhood-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<ol>
+     							<li><h4>Draft Theses on National and Colonial Questions - Lenin</h4>
+     							<p><a href="https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Original</a> | <a href="https://web.archive.org/web/20221125210212/https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Archive</a></p></li>
+     							<li><h4>El Decálogo de Runasur</h4>
+     							<p><a href="https://runasur.org/">Original</a> | <a href="https://web.archive.org/web/20221120190314/https://runasur.org/">Archive</a></p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
@@ -167,8 +172,8 @@
      							<p>- Ibrahim Kaypakkaya, 144 pages.</p>
      							<p><a href="https://foreignlanguages.press/colorful-classics/on-the-national-question-ibrahim-kaypakkaya/">Text</a> | Audio Not Available</p></li>
      							<li><h4>The Right of Nations to Self Determination</h4>
-     							<p>- V.L Lenin, ? pages.</p>
-     							<p><a href="https://www.marxists.org/archive/lenin/works/1914/self-det/index.htm">Text</a> | Audio Not Available</p></li>
+     							<p>- V.L Lenin, 240 pages.</p>
+     							<p><a href="https://foreignlanguages.press/stocks/foundations/rightofnationstoselfdetermination/">Text</a> | <a href="https://www.youtube.com/watch?v=0bbODqyoeM0">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
