idk how to fix the things in this

--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -36,7 +36,10 @@
 						<input type="checkbox" id="overview-articles" class="hiddenToggle">
 						<label class="hiddenHead" for="overview-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<ol>
+								<li><h4>Revolutionary Socialism is the Primary Political Ideology of The Red Nation</h4>
+								<p><a href="https://therednation.org/revolutionary-socialism-is-the-primary-political-ideology-of-the-red-nation-2/">Original</a> | <a href="https://web.archive.org/web/20221219140917/https://therednation.org/revolutionary-socialism-is-the-primary-political-ideology-of-the-red-nation-2/">Archive.org</a></p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
