fixed guide stuff

--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -80,7 +80,7 @@
 						<input type="checkbox" id="economy-articles" class="hiddenToggle">
 						<label class="hiddenHead" for="economy-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>								
+							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
@@ -93,7 +93,7 @@
      							<p><a href="https://archive.org/details/CapitalVolume1">Text</a> | <a href="https://www.youtube.com/watch?v=GmgycyY5saM&list=PLUjbFtkcDBlSHVigHHx_wjaeWmDN2W-h8">Youtube</a></p></li>
      							<li><h4>Wage Labor and Capital</h4>
      							<p>- Karl Marx, 68 pages.</p>
-     							<p><a href="https://archive.org/details/wagelaborcapital00marx">Text</a> | <a href="https://www.youtube.com/watch?v=6llbLvm3RAc&list=PLXUFLW8t2snsxgLG48-U1bGXmbK_92_hg&index=4"Youtube</a></p></li>
+								<p><a href="https://archive.org/details/wagelaborcapital00marx">Text</a> | <a href="https://www.youtube.com/watch?v=6llbLvm3RAc&list=PLXUFLW8t2snsxgLG48-U1bGXmbK_92_hg&index=4">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -104,13 +104,13 @@
 							<ol>
 								<li><h4>Karl Marx - Das Kapital (Summary)</h4>
 								<p>- Chapter by Chapter, Playlist.</p>
-								<p><a href ="https://www.youtube.com/watch?v=yxDpF3XqpV4&list=PLUVllNXk1GCpkzSmJHCSXqJE9JGIfS1dU">Youtube</a></p></li>
+								<p><a href="https://www.youtube.com/watch?v=yxDpF3XqpV4&list=PLUVllNXk1GCpkzSmJHCSXqJE9JGIfS1dU">Youtube</a></p></li>
 								<li><h4>Why Capitalism Will Always Fail</h4>
 								<p>- Hakim, 10 minutes.</p>
-								<p><a href ="https://www.youtube.com/watch?v=SEGGvVinUao">Youtube</a></p></li>
+								<p><a href="https://www.youtube.com/watch?v=SEGGvVinUao">Youtube</a></p></li>
 								<li><h4>The Fundamentals of Marxian Economics</h4>
 								<p>- Center For Popular Economics, 8 minutes.</p>
-								<p><a href ="https://www.youtube.com/watch?v=Qke6FcIvfhU">Youtube</a></p></li>
+								<p><a href="https://www.youtube.com/watch?v=Qke6FcIvfhU">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
