replace dead links

--- a/pages/resources/feministres.html
+++ b/pages/resources/feministres.html
@@ -34,7 +34,7 @@
 					<a href="https://docs.google.com/document/d/1w8pg2Bdq2TsCSyMIrWV8dx9rcx4LglKsDHrWwl2vrD4/"><p>Abortion Fundraising Kit</p></a>
 					<a href="https://abortionfunds.org/funds/"><p>Abortion Funds</p></a>
 					<a href="https://abortionfundpa.org/donate/"><p>Abortion Funds of PA</p></a>
-					<a href="https://docs.google.com/document/d/1qi3YdnpcxOCPk9imk2SWvRhAQg44eKM3jEM1nD1QlFM/edit/"><p>Abortion Resource Kit (May 2022)</p></a>
+					<a href="https://tinyurl.com/AbortionResourceKit"><p>Abortion Resource Kit (June 2022)</p></a>
 					<a href="https://twitter.com/chadloder/status/1540361894027964417/"><p>Abortion Sites per State Twitter Thread</p></a>
 					<a href="https://www.reddit.com/r/childfree/wiki/doctors/"><p>A List of Doctors Willing to Perform Sterilizations</p></a>
 					<a href="https://docs.google.com/document/d/1X_TsQVyEJVNcktQ06dwWoT4_jqLB_uOqLV0qh_viFb0/"><p>Copy of Abortion Funds in Every State</p></a>
@@ -48,7 +48,7 @@
 					<a href="https://www.liberateabortion.org/"><p>Liberate Abortion</p></a>
 					<a href="https://www.lizartistry.com/"><p>Lizartistry</p></a>
 					<a href="https://fundathon.nnaf.org/"><p>National Network of Abortion Funds</p></a>
-					<a href="https://usa1lib.org/book/11987773/b55879/"><p>New Handbook For A Post Roe America</p></a>
+					<a href="https://tinyurl.com/NewHandbookPostRoe"><p>New Handbook For A Post Roe America</p></a>
 					<a href="https://www.bonfire.com/northwest-abortion-access-fund-1/"><p>Northwest Abortion Access Funds</p></a>
 					<a href="https://www.plancpills.org/"><p>Planc Pills</p></a>
 					<a href="https://twitter.com/onlyannamaria/status/1433068672424235009/"><p>Preparation in the Event of Abortion Bans Twitter Thread</p></a>
