--- a/pages/resources/libraries.html
+++ b/pages/resources/libraries.html
@@ -40,11 +40,12 @@
 				<label class="hiddenHead" for="nonsocialist-libraries"><h2>Non-Socialist Specific Libraries</h2></label>
 				<div class="hiddenBody">
 						<a href="https://library.memoryoftheworld.org/"><p>Memory of the World</p></a>
+            <a href="https://annas-archive.org/"><p>Anna's Archive</p></a>
 						<a href="https://www.pdfdrive.com/"><p>PdfDrive</p></a>
-						<a href="https://sci-hub.se/"><p>Sci-Hub</p></a>
+						<a href="http://sci-hub.se/"><p>Sci-Hub</p></a>
 						<a href="https://the-eye.eu/"><p>The Eye</p></a>
-     					<a href="https://archive.org/"><p>The Internet Archive</p></a>
-						<a href="https://z-lib.org/"><p>Z-Library</p></a>
+            <a href="https://archive.org/"><p>The Internet Archive</p></a>
+						<a href="http://zlibrary24tuxziyiyfr7zd46ytefdqbqd2axkmxm4o5374ptpc52fad.onion/"><p>Z-Library (requires TOR Browser)</p></a>
 				</div>
 			</div>
 			<div class="hidden">
