--- a/pages/resources/orgs/us.html
+++ b/pages/resources/orgs/us.html
@@ -32,7 +32,7 @@
 				<div class="hiddenBody">
 					<a href="https://www.americanpartyoflabor.com/"><p>American Party of Labor</p></a>
 					<a href="https://blackallianceforpeace.com/"><p>Black Alliance For Peace</p></a>
-					<a href="https://blackpeopleunited.ca/"><p>Black People United</p></a>
+					<a href="https://www.facebook.com/bpucalgary"><p>Black People United</p></a>
 					<a href="https://www.cpusa.org/"><p>Communist Party USA</p></a>
 					<a href="https://linktr.ee/frso/"><p>Freedom Road Socialist Organization</p></a>
 					<a href="https://hueypnewtongunclub.org/"><p>Huey P Newton Gun Club</p></a>
