--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -157,9 +157,9 @@
 						<div class="hiddenBody">
 							<ol>
      							<li><h4>Draft Theses on National and Colonial Questions - Lenin</h4>
-     							<p><a href="https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Original</a> | <a href="https://web.archive.org/web/20221125210212/https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Archive</a></p></li>
-     							<li><h4>El Decálogo de Runasur</h4>
-     							<p><a href="https://runasur.org/">Original</a> | <a href="https://web.archive.org/web/20221120190314/https://runasur.org/">Archive</a></p></li>
+     							<p><a href="https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Original</a> | <a href="https://web.archive.org/web/20221125210212/https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Archive.org</a></p></li>
+     							<li><h4>El Decálogo de Runasur - Evo Morales</h4>
+     							<p><a href="https://runasur.org/">Original</a> | <a href="https://web.archive.org/web/20221120190314/https://runasur.org/">Archive.org</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -195,6 +195,8 @@
 						<label class="hiddenHead" for="settler-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
 							<ol>
+								<li><h4>Native Liberation: The Way Forward</h4>
+								<p><a href="http://gooriweb.org/genocide/89.pdf">PDF</a> | Archive Unavailable</p></li>
 								<li><h4>Settler Colonialism and the Elimination of the Native</h4>
 								<p><a href="http://gooriweb.org/genocide/89.pdf">PDF</a> | Archive Unavailable</p></li>
 							</ol>
@@ -206,6 +208,12 @@
 						<div class="hiddenBody">
 							<ol>
      							<li><h4>Red Skin, White Masks</h4>
+     							<p>- Glen Sean Coulthard, 245 pages.</p>
+     							<p><a href="https://libgen.is/book/index.php?md5=B22F728E5F822A7204D0994E7BCD8DE4">Text</a> | Audio Not Available</p></li>
+							<li><h4>Settler Colonialism: A Theoretical Overview</h4>
+     							<p>- Lorenzo Veracini, 191 pages.</p>
+     							<p><a href="https://libgen.is/book/index.php?md5=E44ABA0CD154E3D9523897086C4103D5">Text</a> | Audio Not Available</p></li>
+							<li><h4>Red Skin, White Masks</h4>
      							<p>- Glen Sean Coulthard, 245 pages.</p>
      							<p><a href="https://libgen.is/book/index.php?md5=B22F728E5F822A7204D0994E7BCD8DE4">Text</a> | Audio Not Available</p></li>
 							</ol>
