--- a/pages/guides/nationhood.html
+++ b/pages/guides/nationhood.html
@@ -26,7 +26,7 @@
 			<hr/>
 		</header>
 		<div class="container">
-      		<p>This guide provides resources on the topics of colonialism, imperialism and nationhood.</p>
+      		<p>This guide provides resources on the topics of indigeneity, nationhood and nationalism.</p>
       		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
 			<div class="hidden">
 				<input type="checkbox" id="indigeneity" class="hiddenToggle">
