--- a/pages/resources/libraries.html
+++ b/pages/resources/libraries.html
@@ -76,6 +76,11 @@
 						<a href="https://transreads.org/"><p>Trans Reads</p></a>
 						<a href="https://docs.google.com/document/d/1we5OEdteZFfAh11v0s_RVh3LWAkVICGrFnvksVynGxw/edit"><p>DPRK Reading List</p></a>
 						<a href="https://docs.google.com/document/d/1Gxwhh-vdeB--47HM-20cEVRC9eAMhrapbNf0Sk8VSOs/edit"><p>Debunking Anti-Communist Myths</p></a>
+						<a href="https://docs.google.com/document/d/1up4ijhG8AH6Cb1Icn6dDcKnpd7SnMOlX9yJZJ_rwkQA/mobilebasic"><p>Reading List</p></a>
+						<a href="https://docs.google.com/document/d/15gaF1kF-g-Kiz3crfgHsp7qkRkK8fNjCDtonGQqC-j4/mobilebasic"><p>Audiobook List</p></a>
+						<a href="https://drive.google.com/drive/folders/1CDQwEIt56mEFMFaP70atiLj56ajgngXq"><p>Marxist Infographics</p></a>
+						<a href="http://aindft.com/"><p>aindft.com</p></a>
+
 				</div>
 			</div>
 			<div class="hidden">
