--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -20,7 +20,6 @@
 				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
 				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
 				<a class="button" href="/pages/library/index"><p>LIBRARY</p></a>
-				<a class="button" href="/pages/resources/index"><p>RESOURCES</p></a>
 			</div>
 			<hr/>
 		</header>
@@ -77,7 +76,7 @@
 			<hr/>
 			<h4>Contacts</h4>
 			<p>Discord server: <a href="https://discord.gg/hQ3XxjrfmF">https://discord.gg/hQ3XxjrfmF</a></p>
-			<p>Email address: <a href="mailto:serious_bee@protonmail.com">serious_bee@protonmail.com</a></p>
+			<p>Email address: <a href="mailto:peopleslandoflearning@protonmail.com">peopleslandoflearning@protonmail.com</a></p>
 		</footer>
   	</body>
 </html>
