--- a/pages/guides/nationhood.html
+++ b/pages/guides/nationhood.html
@@ -35,7 +35,12 @@
 						<input type="checkbox" id="indigeneity-articles" class="hiddenToggle">
 						<label class="hiddenHead" for="indigeneity-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<ol>
+     							<li><h4>Nationhood or Genocide: The Struggle of Native People Against Canadian and American Imperialism</h4>
+     							<p><a href="https://www.marxists.org/history/erol/ca.secondwave/nationhood.htm">Original<a/> | <a href="https://web.archive.org/web/20220715210529/https://www.marxists.org/history/erol/ca.secondwave/nationhood.htm">Archive.org<a/></p></li>
+     							<li><h4>The Native National Question and the Marxist Leninist Movement</h4>
+     							<p><a href="https://www.marxists.org/history/erol/ca.secondwave/bu-native-nat-question.htm">Original<a/> | <a href="https://web.archive.org/web/20221108231113/https://www.marxists.org/history/erol/ca.secondwave/bu-native-nat-question.htm">Archive.org<a/></p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
