--- a/pages/guides/nationhood.html
+++ b/pages/guides/nationhood.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
-		<title>Colonialism and Imperialism</title>
+		<title>Indigeneity and Nationhood</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
-		<meta content="https://peopleslandoflearning.github.io/pages/colonialism" property="og:url"/>
+		<meta content="https://peopleslandoflearning.github.io/pages/nationhood" property="og:url"/>
 		<meta content="/assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
@@ -37,9 +37,9 @@
 						<div class="hiddenBody">
 							<ol>
      							<li><h4>Nationhood or Genocide: The Struggle of Native People Against Canadian and American Imperialism</h4>
-     							<p><a href="https://www.marxists.org/history/erol/ca.secondwave/nationhood.htm">Original<a/> | <a href="https://web.archive.org/web/20220715210529/https://www.marxists.org/history/erol/ca.secondwave/nationhood.htm">Archive.org<a/></p></li>
+     							<p><a href="https://www.marxists.org/history/erol/ca.secondwave/nationhood.htm">Original</a> | <a href="https://web.archive.org/web/20220715210529/https://www.marxists.org/history/erol/ca.secondwave/nationhood.htm">Archive.org</a></p></li>
      							<li><h4>The Native National Question and the Marxist Leninist Movement</h4>
-     							<p><a href="https://www.marxists.org/history/erol/ca.secondwave/bu-native-nat-question.htm">Original<a/> | <a href="https://web.archive.org/web/20221108231113/https://www.marxists.org/history/erol/ca.secondwave/bu-native-nat-question.htm">Archive.org<a/></p></li>
+     							<p><a href="https://www.marxists.org/history/erol/ca.secondwave/bu-native-nat-question.htm">Original</a> | <a href="https://web.archive.org/web/20221108231113/https://www.marxists.org/history/erol/ca.secondwave/bu-native-nat-question.htm">Archive.org</a></p></li>
 							</ol>
 						</div>
 					</div>
