fixed hidden functionality

--- a/pages/guides/nationhood.html
+++ b/pages/guides/nationhood.html
@@ -51,6 +51,7 @@
 						</div>
 					</div>
 					<div class="hidden">
+						<input type="checkbox" id="indigeneity-videos" class="hiddenToggle">
 						<label class="hiddenHead" for="indigeneity-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
 							<p>Nothing so far! Please suggest resources if you have any.</p>
