added an article to the base theory page

--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -170,7 +170,10 @@
 						<input type="checkbox" id="philosophy-articles" class="hiddenToggle">
 						<label class="hiddenHead" for="philosophy-articles"><h3>Articles and Pamphlets</h3></label>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<ol>
+     							<li><h4>Making Sense of Dialectical Materialism</h4>
+     							<p><a href="https://www.anthonyskewspolitics.com/blog/2022/2/23/making-sense-of-dialectical-materialism">Anthonyskewspolitics.com</a> | <a href="https://web.archive.org/web/20220308041055/https://www.anthonyskewspolitics.com/blog/2022/2/23/making-sense-of-dialectical-materialism">Archive.org</a></p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
