small update to nationhood/indigeneity guide

--- a/pages/guides/nationhood.html
+++ b/pages/guides/nationhood.html
@@ -60,6 +60,63 @@
 				</div>
 			</div>
 			<div class="hidden">
+				<input type="checkbox" id="internationalism" class="hiddenToggle">
+				<label class="hiddenHead" for="internationalism"><h2>Indigeneity</h2></label>
+				<div class="hiddenBody">
+					<div class="hidden">
+						<input type="checkbox" id="internationalism-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="internationalism-articles"><h3>Articles and Pamphlets</h3></label>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<input type="checkbox" id="internationalism-books" class="hiddenToggle">
+						<label class="hiddenHead" for="internationalism-books"><h3>Books</h3></label>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<input type="checkbox" id="internationalism-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="internationalism-videos"><h3>Videos</h3></label>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="hidden">
+				<input type="checkbox" id="plurinacionalidad" class="hiddenToggle">
+				<label class="hiddenHead" for="plurinacionalidad"><h2>Plurinacionalidad</h2></label>
+				<div class="hiddenBody">
+					<div class="hidden">
+						<input type="checkbox" id="plurinacionalidad-articles" class="hiddenToggle">
+						<label class="hiddenHead" for="plurinacionalidad-articles"><h3>Articles and Pamphlets</h3></label>
+						<div class="hiddenBody">
+							<ol>
+     							<li><h4>Plurinacionalidad, Translated</h4>
+     							<p><a href="/pages/library/selfhosted/plurinacionalidad_en">Self Hosted</a></p></li>
+							</ol>
+						</div>
+					</div>
+					<div class="hidden">
+						<input type="checkbox" id="plurinacionalidad-books" class="hiddenToggle">
+						<label class="hiddenHead" for="indigeneity-books"><h3>Books</h3></label>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<input type="checkbox" id="plurinacionalidad-videos" class="hiddenToggle">
+						<label class="hiddenHead" for="indigeneity-videos"><h3>Videos</h3></label>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="hidden">
 				<input type="checkbox" id="nationhood" class="hiddenToggle">
 				<label class="hiddenHead" for="nationhood"><h2>Nationhood</h2></label>
 				<div class="hiddenBody">
@@ -70,8 +127,6 @@
 							<ol>
      							<li><h4>Draft Theses on National and Colonial Questions - Lenin</h4>
      							<p><a href="https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Original</a> | <a href="https://web.archive.org/web/20221125210212/https://www.marxists.org/archive/lenin/works/1920/jun/05.htm">Archive.org</a></p></li>
-     							<li><h4>El Decálogo de Runasur - Evo Morales</h4>
-     							<p><a href="https://runasur.org/">Original</a> | <a href="https://web.archive.org/web/20221120190314/https://runasur.org/">Archive.org</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -93,8 +148,11 @@
 						<input type="checkbox" id="nationhood-videos" class="hiddenToggle">
 						<label class="hiddenHead" for="nationhood-videos"><h3>Videos</h3></label>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>
-						</div>
+							<ol>
+     							<li><h4>Nationalism</h4>
+     							<p>- Luna Oi, 26 minutes.</p>
+     							<p><a href="https://www.youtube.com/watch?v=CkbSYIyzmF0">Youtube</a></p></li>
+							</ol>
 					</div>
 				</div>
 			</div>
