made the puerto rico page an actual html

--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html>
+ 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
+		<title>Donation Links</title>
+		<meta content="The People's Land of Learning" property="og:title"/>
+		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
+		<meta content="https://peopleslandoflearning.github.io/pages/resources/donation" property="og:url"/>
+		<meta content="/assets/icon.png" property="og:image"/>
+		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
+		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+  	</head>
+ 	<body>
+		<header>
+			<a href="/" id="puerto_rico"><h1>The People's Land of Learning</h1></a>
+			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
+			<div id="buttonMenu">
+				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
+				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
+				<a class="button" href="/pages/library/index"><p>LIBRARY</p></a>
+			</div>
+			<hr/>
+		</header>
+		<div class="container">
+			<!-- Category adding template
+			<div class="textGroup">
+				<a href=""><h3>Category</h3></a>
+				<p>Subtitle</p>
+			</div>
+			-->
+			<div class="textGroup">
+			</div>
+		<footer>
+			<hr/>
+			<h4>Contacts</h4>
+			<p>Discord server: <a href="https://discord.gg/hQ3XxjrfmF">https://discord.gg/hQ3XxjrfmF</a></p>
+			<p>Email address: <a href="mailto:peopleslandoflearning@protonmail.com">peopleslandoflearning@protonmail.com</a></p>
+		</footer>
+  	</body>
+</html>
