--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="textGroup">
 				<h3>Specific Topics</h3>
 				<a href="/pages/topics/indonesia"><p>Indonesia</p></a>
-				<a href="/pages/topics/pr"><p>Puerto Rico</p></a>
+				<a href="/pages/topics/puerto_rico"><p>Puerto Rico</p></a>
 				<a href="/pages/topics/dprk"><p>The DRPK</p></a>
 				<a href="/pages/topics/ussettler"><p>The US as a Settler Empire</p></a>
 			</div>
