added categories to the puerto rico page

--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -24,14 +24,38 @@
 			<hr/>
 		</header>
 		<div class="container">
-			<!-- Category adding template
-			<div class="textGroup">
-				<a href=""><h3>Category</h3></a>
-				<p>Subtitle</p>
+			<div class="hidden">
+				<input type="checkbox" id="aguadilla" class="hiddenToggle">
+				<label class="hiddenHead" for="aguadilla"><h2>Aguadilla Resources</h2></label>
+				<div class="hiddenBody">
+					<p><a href=""></a></p>
+				</div>
 			</div>
-			-->
-			<div class="textGroup">
+			<div class="hidden">
+				<input type="checkbox" id="land_theft" class="hiddenToggle">
+				<label class="hiddenHead" for="land_theft"><h2>Recent History of Land Theft</h2></label>
+				<div class="hiddenBody">
+				</div>
 			</div>
+			<div class="hidden">
+				<input type="checkbox" id="resistance" class="hiddenToggle">
+				<label class="hiddenHead" for="resistance"><h2>Colonialism and Resistance</h2></label>
+				<div class="hiddenBody">
+				</div>
+			</div>
+			<div class="hidden">
+				<input type="checkbox" id="diaspora" class="hiddenToggle">
+				<label class="hiddenHead" for="diaspora"><h2>The Diaspora</h2></label>
+				<div class="hiddenBody">
+				</div>
+			</div>
+			<div class="hidden">
+				<input type="checkbox" id="misc" class="hiddenToggle">
+				<label class="hiddenHead" for="misc"><h2>Misc Resources</h2></label>
+				<div class="hiddenBody">
+				</div>
+			</div>
+		</div>
 		<footer>
 			<hr/>
 			<h4>Contacts</h4>
