--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
-		<title>Donation Links</title>
+		<title>Puerto Rico</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
 		<meta content="https://peopleslandoflearning.github.io/pages/resources/donation" property="og:url"/>
