--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -28,8 +28,8 @@
 				<input type="checkbox" id="aguadilla" class="hiddenToggle">
 				<label class="hiddenHead" for="aguadilla"><h2>Aguadilla Resources</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
+					<input type="checkbox" id="a_articles" class="hiddenToggle">
+					<label class="hiddenHead" for="a_articles"><h2>Articles</h2></label>
 						<div class="hiddenBody">
 						</div>
 					</div>
@@ -40,8 +40,8 @@
 				<input type="checkbox" id="luma" class="hiddenToggle">
 				<label class="hiddenHead" for="luma"><h2>LUMA</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
+					<input type="checkbox" id="la_articles" class="hiddenToggle">
+					<label class="hiddenHead" for="la_articles"><h2>Articles</h2></label>
 						<div class="hiddenBody">
 						</div>
 					</div>
@@ -52,8 +52,8 @@
 				<input type="checkbox" id="land_theft" class="hiddenToggle">
 				<label class="hiddenHead" for="land_theft"><h2>Recent History of Land Theft</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
+					<input type="checkbox" id="lt_articles" class="hiddenToggle">
+					<label class="hiddenHead" for="lt_articles"><h2>Articles</h2></label>
 						<div class="hiddenBody">
 						</div>
 					</div>
@@ -64,8 +64,8 @@
 				<input type="checkbox" id="diaspora" class="hiddenToggle">
 				<label class="hiddenHead" for="diaspora"><h2>The Diaspora</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
+					<input type="checkbox" id="d_articles" class="hiddenToggle">
+					<label class="hiddenHead" for="d_articles"><h2>Articles</h2></label>
 						<div class="hiddenBody">
 						</div>
 					</div>
@@ -76,8 +76,8 @@
 				<input type="checkbox" id="misc" class="hiddenToggle">
 				<label class="hiddenHead" for="misc"><h2>Misc Resources</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
+					<input type="checkbox" id="m_articles" class="hiddenToggle">
+					<label class="hiddenHead" for="m_articles"><h2>Articles</h2></label>
 						<div class="hiddenBody">
 						</div>
 					</div>
