--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -14,7 +14,7 @@
   	</head>
  	<body>
 		<header>
-			<a href="/" id="puerto_rico"><h1>The People's Land of Learning</h1></a>
+			<a href="/" id="title"><h1>The People's Land of Learning</h1></a>
 			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
 			<div id="buttonMenu">
 				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
@@ -28,60 +28,55 @@
 				<input type="checkbox" id="aguadilla" class="hiddenToggle">
 				<label class="hiddenHead" for="aguadilla"><h2>Aguadilla Resources</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
-						<div class="hiddenBody">
-						</div>
+					<input type="checkbox" id="aguadilla-articles" class="hiddenToggle">
+					<label class="hiddenHead" for="aguadilla-articles"><h2>Articles</h2></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
-
 				</div>
 			</div>
 			<div class="hidden">
 				<input type="checkbox" id="luma" class="hiddenToggle">
 				<label class="hiddenHead" for="luma"><h2>LUMA</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
-						<div class="hiddenBody">
-						</div>
+					<input type="checkbox" id="luma-articles" class="hiddenToggle">
+					<label class="hiddenHead" for="luma-articles"><h2>Articles</h2></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
-
 				</div>
 			</div>
 			<div class="hidden">
 				<input type="checkbox" id="land_theft" class="hiddenToggle">
 				<label class="hiddenHead" for="land_theft"><h2>Recent History of Land Theft</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
-						<div class="hiddenBody">
-						</div>
+					<input type="checkbox" id="land_theft-articles" class="hiddenToggle">
+					<label class="hiddenHead" for="land_theft-articles"><h2>Articles</h2></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
-
 				</div>
 			</div>
 			<div class="hidden">
 				<input type="checkbox" id="diaspora" class="hiddenToggle">
 				<label class="hiddenHead" for="diaspora"><h2>The Diaspora</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
-						<div class="hiddenBody">
-						</div>
+					<input type="checkbox" id="diaspora-articles" class="hiddenToggle">
+					<label class="hiddenHead" for="diaspora-articles"><h2>Articles</h2></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
-
 				</div>
 			</div>
 			<div class="hidden">
 				<input type="checkbox" id="misc" class="hiddenToggle">
 				<label class="hiddenHead" for="misc"><h2>Misc Resources</h2></label>
 				<div class="hiddenBody">
-					<input type="checkbox" id="articles" class="hiddenToggle">
-					<label class="hiddenHead" for="articles"><h2>Articles</h2></label>
-						<div class="hiddenBody">
-						</div>
+					<input type="checkbox" id="misc-articles" class="hiddenToggle">
+					<label class="hiddenHead" for="misc-articles"><h2>Articles</h2></label>
+					<div class="hiddenBody">
+						<p>Nothing so far! Please suggest resources if you have any.</p>
 					</div>
-
 				</div>
 			</div>
 		</div>
