--- a/pages/topics/puerto_rico.html
+++ b/pages/topics/puerto_rico.html
@@ -39,10 +39,10 @@
 					<input type="checkbox" id="aguadilla-facebook" class="hiddenToggle">
 					<label class="hiddenHead" for="aguadilla-facebook"><h2>Facebook</h2></label>
 					<div class="hiddenBody">
-						<p><a href="https://www.facebook.com/soyCarey/">Campamento Carey</a></p>
-						<p><a href="https://www.facebook.com/groups/846922903243352/">Campamento Pelicano</a></p>
-						<p><a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis</a></p>
-						<p><a href="https://www.facebook.com/power4puertorico/">Power For Puerto Rico</a></p>
+						<p><a href="https://www.facebook.com/soyCarey/">Campamento Carey (Organization)</a></p>
+						<p><a href="https://www.facebook.com/groups/846922903243352/">Campamento Pelicano (Organization)</a></p>
+						<p><a href="https://www.facebook.com/people/Jos%C3%A9-Luis/100082926514357/">José Luis (Journalist)</a></p>
+						<p><a href="https://www.facebook.com/power4puertorico/">Power For Puerto Rico (Organization)</a></p>
 					</div>
 				</div>
 				<div class="hiddenBody">
@@ -50,16 +50,19 @@
 					<label class="hiddenHead" for="aguadilla-instagram"><h2>Instagram</h2></label>
 					<div class="hiddenBody">
 						<p><a href="https://www.instagram.com/AbayardeRojo/">Abayarde Rojo</a></p>
-						<p><a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon</a></p>
-						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano</a></p>
-						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Eliezer Molinapr</a></p>
+						<p><a href="https://www.instagram.com/campamento.cemi.rincon/">Campamento Cemi Rincon (Organization)</a></p>
+						<p><a href="https://www.instagram.com/campamento_pelicano_aguadilla/">Campamento Pelicano (Organization)</a></p>
+						<p><a href="https://www.instagram.com/eliezermolinapr/?hl=en">Eliezer Molinapr (Journalist)</a></p>
 					</div>
 				</div>
 				<div class="hiddenBody">
 					<input type="checkbox" id="aguadilla-twitter" class="hiddenToggle">
 					<label class="hiddenHead" for="aguadilla-twitter"><h2>Twitter</h2></label>
 					<div class="hiddenBody">
-						<p><a href=""></a></p>
+						<p><a href="https://twitter.com/MareaEcologista">León Fiscalizador (Journalist)</a></p>
+						<p><a href="https://twitter.com/MareaEcologista">Marea Ecologista (Journal/Media)</a></p>
+						<p><a href="https://twitter.com/MarcosPerezRam">Marcos Perez Ram (Journalist)</a></p>
+						<p><a href="https://twitter.com/PalabraLibrePR">Palabra Libre (Journal/Media)</a></p>
 					</div>
 				</div>
 			</div>
